# jobapp

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_posted_at.py  0003_add_job_indexes.py  0004_application_generation_status.py  0005_seed_profile_jaynesh.py  0006_recompute_dedupe_hashes.py  0007_set_location_preferences.py
app/: celery_app.py  config.py  database.py  main.py
app/llm/: client.py  providers.py
app/models/: __init__.py  application.py  job.py  profile.py
app/routers/: apps.py  docs.py  jobs.py  outreach.py  profile.py  settings.py
app/services/: ats_discovery.py  ats_seeds.py  ats_validation.py  deduplication.py  doc_generator.py  job_fetcher.py  locations.py  matcher.py  outreach.py  profile_service.py  query_expansion.py
app/services/sources/: adzuna.py  arbeitnow.py  ashby.py  base.py  (+23 more)
app/tasks/: fetch.py  generate.py  match.py
app/templates/: base.html
nginx/: nginx.conf
tests/: conftest.py  test_ats_discovery.py  test_ats_validation.py  test_celery.py  test_config.py  test_deduplication.py  test_doc_generator.py  test_fetch_task.py  test_health.py  test_job_sources.py  test_llm_client.py  test_llm_providers.py  test_locations.py  test_matcher.py  test_models_application.py  test_models_job.py  test_models_profile.py  test_outreach.py  test_profile_routes.py  test_profile_service.py  test_query_expansion.py  test_tracker_ui.py
(+31 files in other folders)
